[gd_scene load_steps=23 format=3 uid="uid://4uor5nnaruka"]

[ext_resource type="Script" uid="uid://b6i70abui5qbo" path="res://common/ui/hud/hud_canvas_layer.gd" id="1_2ngon"]
[ext_resource type="Texture2D" uid="uid://ddxrx5y1b84ln" path="res://assets/2d/ui/Happiness-icon.png" id="2_6torc"]
[ext_resource type="Texture2D" uid="uid://cl0lr84e76vsa" path="res://assets/2d/ui/Envior-icon.png" id="3_8yxrh"]
[ext_resource type="Theme" uid="uid://cr00fee06cge6" path="res://common/themes/quest_ui_theme.tres" id="4_8yxrh"]
[ext_resource type="Texture2D" uid="uid://c82rv8465rx4a" path="res://assets/2d/ui/weather-sunny_icon-placeholder.png" id="5_5quvr"]
[ext_resource type="PackedScene" uid="uid://dbfwnrfa7yds4" path="res://common/ui/components/quest/quest_list.tscn" id="5_ajdrq"]
[ext_resource type="Texture2D" uid="uid://ymr1rjs8qkmr" path="res://assets/2d/ui/seed_icon-placeholder.png" id="6_owaxp"]
[ext_resource type="Texture2D" uid="uid://bc11lu6db7d0l" path="res://assets/2d/ui/water_icon-placeholder.png" id="7_kwr8q"]
[ext_resource type="Theme" uid="uid://w6tefp42fcps" path="res://common/themes/toolbar_theme.tres" id="8_bgxx2"]
[ext_resource type="Texture2D" uid="uid://bdy33iqkbh4qq" path="res://assets/2d/ui/toolbar_icons_spritesheet.png" id="9_54k12"]
[ext_resource type="Texture2D" uid="uid://ctid086g76a2a" path="res://assets/2d/ui/Slot.png" id="11_5quvr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8yxrh"]
content_margin_top = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5quvr"]
bg_color = Color(0.231373, 0.815686, 0.952941, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_owaxp"]
bg_color = Color(0.776471, 0.85098, 0.231373, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwr8q"]
bg_color = Color(0.219608, 0.301961, 0.34902, 0.937255)

[sub_resource type="Theme" id="Theme_6igmu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m84km"]
atlas = ExtResource("9_54k12")
region = Rect2(0, 0, 80, 80)

[sub_resource type="LabelSettings" id="LabelSettings_nvanc"]
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs73l"]
atlas = ExtResource("9_54k12")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixwtd"]
atlas = ExtResource("9_54k12")
region = Rect2(240, 0, 80, 80)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6torc"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.419608, 0.25098, 0.470588, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.633468, 0.422737, 0.697889, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ajdrq"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.75756, 0.581548, 0, 0.501961)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HUDCanvasLayer" type="CanvasLayer"]
script = ExtResource("1_2ngon")
weather_icon_sunny = ExtResource("5_5quvr")
weather_icon_rainy = ExtResource("3_8yxrh")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopLeftMarginContainer" type="MarginContainer" parent="HUD"]
layout_mode = 1
offset_right = 260.0
offset_bottom = 189.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/TopLeftMarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 10

[node name="GlobalProgressVBoxContainer" type="VBoxContainer" parent="HUD/TopLeftMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 18

[node name="CommunityHBoxContainer" type="HBoxContainer" parent="HUD/TopLeftMarginContainer/VBoxContainer/GlobalProgressVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="CommunityIcon" type="TextureRect" parent="HUD/TopLeftMarginContainer/VBoxContainer/GlobalProgressVBoxContainer/CommunityHBoxContainer"]
layout_mode = 2
texture = ExtResource("2_6torc")
stretch_mode = 2

[node name="CommunityProgressBar" type="ProgressBar" parent="HUD/TopLeftMarginContainer/VBoxContainer/GlobalProgressVBoxContainer/CommunityHBoxContainer"]
custom_minimum_size = Vector2(200, 12)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_8yxrh")
theme_override_styles/fill = SubResource("StyleBoxFlat_5quvr")
value = 66.0
show_percentage = false

[node name="StatusLabel" type="Label" parent="HUD/TopLeftMarginContainer/VBoxContainer/GlobalProgressVBoxContainer/CommunityHBoxContainer"]
layout_mode = 2
text = "100"

[node name="EnvironmentHBoxContainer" type="HBoxContainer" parent="HUD/TopLeftMarginContainer/VBoxContainer/GlobalProgressVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="EnvironmentIcon" type="TextureRect" parent="HUD/TopLeftMarginContainer/VBoxContainer/GlobalProgressVBoxContainer/EnvironmentHBoxContainer"]
layout_mode = 2
texture = ExtResource("3_8yxrh")
stretch_mode = 2

[node name="EnvironmentProgressBar" type="ProgressBar" parent="HUD/TopLeftMarginContainer/VBoxContainer/GlobalProgressVBoxContainer/EnvironmentHBoxContainer"]
custom_minimum_size = Vector2(200, 12)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_8yxrh")
theme_override_styles/fill = SubResource("StyleBoxFlat_owaxp")
value = 33.0
show_percentage = false

[node name="StatusLabel" type="Label" parent="HUD/TopLeftMarginContainer/VBoxContainer/GlobalProgressVBoxContainer/EnvironmentHBoxContainer"]
layout_mode = 2
text = "100"

[node name="QuestMarginContainer" type="MarginContainer" parent="HUD/TopLeftMarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_8yxrh")

[node name="PanelContainer" type="PanelContainer" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="QuestListVBoxContainer" type="VBoxContainer" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="SingleQuestMarginContainer" type="MarginContainer" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer/MarginContainer/QuestListVBoxContainer"]
layout_mode = 2

[node name="SingleQuestVBoxContainer" type="VBoxContainer" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer/MarginContainer/QuestListVBoxContainer/SingleQuestMarginContainer"]
layout_mode = 2

[node name="QuestTitle" type="Label" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer/MarginContainer/QuestListVBoxContainer/SingleQuestMarginContainer/SingleQuestVBoxContainer"]
layout_mode = 2
theme_type_variation = &"QuestTitle"
text = "Help around Here"

[node name="QuestHSeparator" type="HSeparator" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer/MarginContainer/QuestListVBoxContainer/SingleQuestMarginContainer/SingleQuestVBoxContainer"]
layout_mode = 2

[node name="QuestDescription" type="RichTextLabel" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer/MarginContainer/QuestListVBoxContainer/SingleQuestMarginContainer/SingleQuestVBoxContainer"]
layout_mode = 2
theme_type_variation = &"QuestDescription"
bbcode_enabled = true
text = "Help [b]Trin[/b] clean up the community."
fit_content = true

[node name="QuestObjectives" type="VBoxContainer" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer/MarginContainer/QuestListVBoxContainer/SingleQuestMarginContainer/SingleQuestVBoxContainer"]
layout_mode = 2

[node name="QuestObjectiveItem" type="HBoxContainer" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer/MarginContainer/QuestListVBoxContainer/SingleQuestMarginContainer/SingleQuestVBoxContainer/QuestObjectives"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer/MarginContainer/QuestListVBoxContainer/SingleQuestMarginContainer/SingleQuestVBoxContainer/QuestObjectives/QuestObjectiveItem"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer/MarginContainer/QuestListVBoxContainer/SingleQuestMarginContainer/SingleQuestVBoxContainer/QuestObjectives/QuestObjectiveItem"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
bbcode_enabled = true
text = "Clean up [color=yellow]trash[/color] on the roof."
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="QuestProgressHBoxContainer" type="HBoxContainer" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer/MarginContainer/QuestListVBoxContainer/SingleQuestMarginContainer/SingleQuestVBoxContainer/QuestObjectives/QuestObjectiveItem"]
layout_mode = 2

[node name="Current" type="Label" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer/MarginContainer/QuestListVBoxContainer/SingleQuestMarginContainer/SingleQuestVBoxContainer/QuestObjectives/QuestObjectiveItem/QuestProgressHBoxContainer"]
layout_mode = 2
theme_type_variation = &"QuestProgressText"
text = "1"

[node name="Slash" type="Label" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer/MarginContainer/QuestListVBoxContainer/SingleQuestMarginContainer/SingleQuestVBoxContainer/QuestObjectives/QuestObjectiveItem/QuestProgressHBoxContainer"]
layout_mode = 2
theme_type_variation = &"QuestProgressText"
text = "/"

[node name="Total" type="Label" parent="HUD/TopLeftMarginContainer/VBoxContainer/QuestMarginContainer/PanelContainer/MarginContainer/QuestListVBoxContainer/SingleQuestMarginContainer/SingleQuestVBoxContainer/QuestObjectives/QuestObjectiveItem/QuestProgressHBoxContainer"]
layout_mode = 2
theme_type_variation = &"QuestProgressText"
text = "5"

[node name="QuestList" parent="HUD/TopLeftMarginContainer/VBoxContainer" instance=ExtResource("5_ajdrq")]
layout_mode = 2

[node name="TopRightMarginContainer" type="MarginContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -204.0
offset_bottom = 75.0
grow_horizontal = 0
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15

[node name="PanelContainer" type="PanelContainer" parent="HUD/TopRightMarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kwr8q")

[node name="WeatherTimeHBoxContainer" type="HBoxContainer" parent="HUD/TopRightMarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 10
alignment = 2

[node name="WeatherIcon" type="TextureRect" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_5quvr")
expand_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ActNameLabel" type="Label" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Act"

[node name="ActNumberLabel" type="Label" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "I"

[node name="ActSeparatorLabel" type="Label" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "|"

[node name="DayStaticLabel" type="Label" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Day"

[node name="DateHBoxContainer" type="HBoxContainer" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Month" type="Label" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DateHBoxContainer"]
visible = false
layout_mode = 2
text = "March"

[node name="Day" type="Label" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DateHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="Year" type="Label" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DateHBoxContainer"]
visible = false
layout_mode = 2
text = "2045"

[node name="TimeHBoxContainer" type="HBoxContainer" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Time" type="Label" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TimeHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "11:00"

[node name="AmPm" type="Label" parent="HUD/TopRightMarginContainer/PanelContainer/WeatherTimeHBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TimeHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "AM"

[node name="LeftMiddleMarginContainer" type="MarginContainer" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -25.0
offset_right = 78.0
offset_bottom = 25.0
grow_vertical = 2
theme_override_constants/margin_left = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/LeftMiddleMarginContainer"]
layout_mode = 2

[node name="ResourceLabel" type="Label" parent="HUD/LeftMiddleMarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "100x Water"

[node name="ResourcesHBoxContainer" type="HBoxContainer" parent="HUD/LeftMiddleMarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="HUD/LeftMiddleMarginContainer/VBoxContainer/ResourcesHBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="ResourceIcon" type="TextureRect" parent="HUD/LeftMiddleMarginContainer/VBoxContainer/ResourcesHBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("6_owaxp")
expand_mode = 3
stretch_mode = 5

[node name="CountMarginContainer" type="MarginContainer" parent="HUD/LeftMiddleMarginContainer/VBoxContainer/ResourcesHBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HUD/LeftMiddleMarginContainer/VBoxContainer/ResourcesHBoxContainer/CountMarginContainer"]
layout_mode = 2
theme = SubResource("Theme_6igmu")

[node name="CountLabel" type="Label" parent="HUD/LeftMiddleMarginContainer/VBoxContainer/ResourcesHBoxContainer/CountMarginContainer/PanelContainer"]
layout_mode = 2
text = "12/30"

[node name="ResourcesHBoxContainer2" type="HBoxContainer" parent="HUD/LeftMiddleMarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="HUD/LeftMiddleMarginContainer/VBoxContainer/ResourcesHBoxContainer2"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="ResourceIcon" type="TextureRect" parent="HUD/LeftMiddleMarginContainer/VBoxContainer/ResourcesHBoxContainer2/MarginContainer"]
layout_mode = 2
texture = ExtResource("7_kwr8q")
expand_mode = 3
stretch_mode = 5

[node name="CountMarginContainer" type="MarginContainer" parent="HUD/LeftMiddleMarginContainer/VBoxContainer/ResourcesHBoxContainer2"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="HUD/LeftMiddleMarginContainer/VBoxContainer/ResourcesHBoxContainer2/CountMarginContainer"]
layout_mode = 2
theme = SubResource("Theme_6igmu")

[node name="CountLabel" type="Label" parent="HUD/LeftMiddleMarginContainer/VBoxContainer/ResourcesHBoxContainer2/CountMarginContainer/PanelContainer2"]
layout_mode = 2
text = "100"

[node name="BottomCenterMarginContainer" type="MarginContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -80.0
offset_right = 120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 20

[node name="ToolbarBackgroundPanelContainer" type="PanelContainer" parent="HUD/BottomCenterMarginContainer"]
layout_mode = 2
theme = ExtResource("8_bgxx2")

[node name="ToolbarMarginContainer" type="MarginContainer" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ToolbarHBoxContainer" type="HBoxContainer" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ToolbarItemPanelContainer" type="PanelContainer" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer"]
layout_mode = 2
mouse_filter = 0
texture = SubResource("AtlasTexture_m84km")
expand_mode = 1

[node name="Control" type="Control" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer/Control"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_constants/margin_left = 5

[node name="Label" type="Label" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer/Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "1"
label_settings = SubResource("LabelSettings_nvanc")

[node name="ToolbarItemPanelContainer2" type="PanelContainer" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TextureRect" type="TextureButton" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer2"]
layout_mode = 2
texture_normal = ExtResource("11_5quvr")
stretch_mode = 6

[node name="Control" type="Control" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer2/Control"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5

[node name="Label" type="Label" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer2/Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "2"
label_settings = SubResource("LabelSettings_nvanc")

[node name="ToolbarItemPanelContainer3" type="PanelContainer" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer3"]
layout_mode = 2
texture = SubResource("AtlasTexture_gs73l")
expand_mode = 1

[node name="Control" type="Control" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer3"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer3/Control"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5

[node name="Label" type="Label" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer3/Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "3"
label_settings = SubResource("LabelSettings_nvanc")

[node name="ToolbarItemPanelContainer4" type="PanelContainer" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer4"]
layout_mode = 2
texture = SubResource("AtlasTexture_ixwtd")
expand_mode = 1

[node name="Control" type="Control" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer4"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer4/Control"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5

[node name="Label" type="Label" parent="HUD/BottomCenterMarginContainer/ToolbarBackgroundPanelContainer/ToolbarMarginContainer/ToolbarHBoxContainer/ToolbarItemPanelContainer4/Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "4"
label_settings = SubResource("LabelSettings_nvanc")

[node name="PopupMenuMarginContainer" type="PanelContainer" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -46.5
offset_right = 269.5
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6torc")

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/PopupMenuMarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="HUD/PopupMenuMarginContainer/VBoxContainer"]
layout_mode = 2
text = "A"

[node name="HSeparator" type="HSeparator" parent="HUD/PopupMenuMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="HUD/PopupMenuMarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "A"
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="HUD/PopupMenuMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="HUD/PopupMenuMarginContainer/VBoxContainer"]
layout_mode = 2
text = "A"

[node name="CenterContainer" type="CenterContainer" parent="HUD/PopupMenuMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/PopupMenuMarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Collect" type="Button" parent="HUD/PopupMenuMarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Collect"

[node name="Close" type="Button" parent="HUD/PopupMenuMarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="TooltipLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 1532.0
offset_top = 1017.0
offset_right = 1549.0
offset_bottom = 1048.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_ajdrq")
text = "x"
label_settings = SubResource("LabelSettings_nvanc")
horizontal_alignment = 1
